# Dots-and-Boxes-Go

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  main.cpp
app/: BaseCanvas.h  BaseCanvasLayer.h  BoxCanvas.h  BoxCanvasLayer.h  Canvas.go  Colors.go  Config.go  DotCanvas.h  DotCanvasLayer.h  EdgeButton.h  EdgeButtonLayer.h  EdgeCanvas.h  EdgeCanvasLayer.h  EdgeLayer.h  Fade.go  FyneApp.toml  GameInterface.go  IntroduceInterface.go  Layout.go  MainWindow.h  Resource.go  Restart.go  StartMenu.go  Theme.go  config.go  main.go
app/cmd/: Generate.go
app/script/: build_android.sh  build_darwin.sh  build_ios.sh  build_linux.sh  build_web.sh  build_windows.sh
core/ai/: AIConfig.h  BasicSearchModel.h  ImprovedSearchModel.h  L0Model.h  L1Model.h  L2Model.h  L3Model.h  L4Model.h  MonteCarloSearchModel.h  ParallelSearchModel.h  SearchModel.h  SimpleStrategyModel.h
core/board/: BoardV0.h  BoardV1.h
core/common/: Array.h  Ptr.h  Queue.h  Random.h  Span.h
core/model/: Box.h  Dot.h  Edge.h  EdgeBoxMapper.h  EdgeCountOfBox.h  EdgeScoreMap.h  ScoreMap.h  Square.h  Step.h
server/: main.go
server/api/: Api.go
server/etc/: config.yaml
server/model/: Response.go
src/: defs.h
src/ai/: AI.go  AIConfig.cpp  AIConfig.h  Interface.go  Interface.h  L0Model.cpp  L0Model.go  L0Model.h  L1Model.cpp  L1Model.go  L1Model.h  L2Model.cpp  L2Model.go  L2Model.h  L3Model.cpp  L3Model.go  L3Model.h  L4Model.cpp  L4Model.go  L4Model.h  (+1 more)
ui/: BaseCanvas.h  BoxCanvas.h  BoxCanvasLayer.h  DotCanvasLayer.h  EdgeButtonLayer.h  EdgeCanvasLayer.h  EdgeLayer.h  MainWindow.h
(+117 files in other folders)
